# k8s-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
src/: agent.py  agent_anthropic.py  agent_openai.py  main.py
src/k8s/: __init__.py  client.py
src/tools/: __init__.py  cronjobs.py  deployments.py  ecr.py  events.py  github.py  namespaces.py  nodes.py  pods.py  registry.py  utils.py
tests/: test_tools.py
